# HMT-Fetch-Bot

./: README.md  fake_scraper.py  hmt_scraper.py  main.py  pyproject.toml  setup.py
