[tool.poetry]
name = "hmt-bot"
version = "0.1.0"
description = ""
authors = ["Emil Michels <emil.michels@posteo.de>"]
readme = "README.md"
packages = [{include = "hmt_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
telegram = "^0.0.1"
fake-useragent = "^1.1.1"
requests ={extras = ["socks"],version = "^2.28.2"}
bs4 = "^0.0.1"
pandas = "^1.5.3"
apscheduler = "^3.10.1"
python-telegram-bot = {extras = ["socks, job-queue"], version="^20.1"}


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
